crates/toml/tests/snapshots/invalid/integer/invalid-hex-01.stderr
TOML parse error at line 1, column 23
  |
1 | invalid-hex-01 = 0xaafz
  |                       ^
invalid hexadecimal number
